--- a/app/views/reimboursements/show.html.erb
+++ b/app/views/reimboursements/show.html.erb
@@ -512,7 +512,7 @@
         </div>
         
         <div class="card-footer">
-          <% if @reimboursement.user_id == current_user.id || current_user.admin? %>
+          <% if @reimboursement.can_be_edited_by?(current_user) %>
             <%= link_to 'Modifica', edit_reimboursement_path(@reimboursement), class: "btn btn-primary" %>
           <% end %>
           <%= link_to 'Indietro', reimboursements_path, class: "btn btn-secondary" %>
