--- a/app/views/projects/edit.html.erb
+++ b/app/views/projects/edit.html.erb
@@ -1,6 +1,7 @@
 <div class="container-fluid">
-  <h1>Editing Project</h1>
-  <%= render 'form', project: @project %>
-  <%= link_to 'Show', @project, class: "btn btn-success" %>
-  <%= link_to 'Back', projects_path, class: "btn btn-secondary" %>
+  <div class="row justify-content-center">
+    <div class="col-lg-8">
+      <%= render 'form', project: @project %>
+    </div>
+  </div>
 </div>
