FIx vari migrazioni

--- a/app/views/expenses/_expense.html.erb
+++ b/app/views/expenses/_expense.html.erb
@@ -1,7 +1,7 @@
 <div id="<%= dom_id expense %>">
   <p>
     <strong>Reimboursment:</strong>
-    <%= expense.reimboursment_id %>
+    <%= expense.reimboursement_id %>
   </p>
 
   <p>
