--- a/app/views/notes/_form.html.erb
+++ b/app/views/notes/_form.html.erb
@@ -14,8 +14,8 @@
       <%= form.collection_select :state_id, State.all, :id, :name, { prompt: true }, { class: "form-select" }  %>
       </div>
   <div class="form-group mb-3">
-          <%= form.label :reimboursment_id %>
-      <%= form.collection_select :reimboursment_id, Reimboursment.all, :id, :name, { prompt: true }, { class: "form-select" }  %>
+          <%= form.label :reimboursement_id %>
+      <%= form.collection_select :reimboursement_id, Reimboursment.all, :id, :name, { prompt: true }, { class: "form-select" }  %>
       </div>
   <div class="form-group mb-3">
           <%= form.label :user_id %>
