--- a/app/views/notes/index.html.erb
+++ b/app/views/notes/index.html.erb
@@ -15,7 +15,7 @@
       <% @notes.each do |note| %>
       <tr>
                   <td><%= note.state_id %></td>
-                  <td><%= note.reimboursment_id %></td>
+                  <td><%= note.reimboursement_id %></td>
                   <td><%= note.user_id %></td>
                   <td><%= note.text %></td>
                 <td><%= link_to 'Show', note %></td>
