--- a/app/views/notes/show.html.erb
+++ b/app/views/notes/show.html.erb
@@ -9,7 +9,7 @@
                 <div class="form-group mb-3">
         <p><strong>Reimboursment:</strong></p>
         <div>
-          <%= @note.reimboursment_id %>
+          <%= @note.reimboursement_id %>
         </div>
       </div>
                 <div class="form-group mb-3">
