--- a/app/views/expenses/index.html.erb
+++ b/app/views/expenses/index.html.erb
@@ -14,7 +14,7 @@
                   <th>Arrival</th>
                   <th>Distance</th>
                   <th>Return trip</th>
-                  <th>veichle_category</th>
+                  <th>vehicle_category</th>
                   <th>Brand</th>
                   <th>Model</th>
                   <th>Fuel</th>
@@ -29,7 +29,7 @@
     <tbody>
       <% @expenses.each do |expense| %>
       <tr>
-                  <td><%= expense.reimboursment_id %></td>
+                  <td><%= expense.reimboursement_id %></td>
                   <td><%= expense.purpose %></td>
                   <td><%= expense.date %></td>
                   <td><%= expense.amount %></td>
@@ -39,7 +39,7 @@
                   <td><%= expense.arrival %></td>
                   <td><%= expense.distance %></td>
                   <td><%= expense.return_trip %></td>
-                  <td><%= expense.veichle_category_id %></td>
+                  <td><%= expense.vehicle_category_id %></td>
                   <td><%= expense.brand %></td>
                   <td><%= expense.model %></td>
                   <td><%= expense.fuel_id %></td>
