--- a/app/views/expenses/show.html.erb
+++ b/app/views/expenses/show.html.erb
@@ -3,7 +3,7 @@
             <div class="form-group mb-3">
         <p><strong>Reimboursment:</strong></p>
         <div>
-          <%= @expense.reimboursment_id %>
+          <%= @expense.reimboursement_id %>
         </div>
       </div>
                 <div class="form-group mb-3">
@@ -61,9 +61,9 @@
         </div>
       </div>
                 <div class="form-group mb-3">
-        <p><strong>veichle_category:</strong></p>
+        <p><strong>vehicle_category:</strong></p>
         <div>
-          <%= @expense.veichle_category_id %>
+          <%= @expense.vehicle_category_id %>
         </div>
       </div>
                 <div class="form-group mb-3">
