--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -9,37 +9,7 @@
           <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put, class: "row g-3" }) do |f| %>
             <%= render "devise/shared/error_messages", resource: resource %>
 
-            <div class="col-md-6">
-              <%= f.label :name, "Nome", class: "form-label" %>
-              <%= f.text_field :name, class: "form-control", required: true, minlength: 2, maxlength: 50 %>
-            </div>
-
-            <div class="col-md-6">
-              <%= f.label :surname, "Cognome", class: "form-label" %>
-              <%= f.text_field :surname, class: "form-control", required: true, minlength: 2, maxlength: 50 %>
-            </div>
-
-            <div class="col-md-6">
-              <%= f.label :email, "Email", class: "form-label" %>
-              <%= f.email_field :email, autofocus: true, autocomplete: "email", class: "form-control", required: true %>
-              <small class="form-text text-muted">Inserisci un indirizzo email valido</small>
-            </div>
-
-            <div class="col-md-6">
-              <%= f.label :username, "Username", class: "form-label" %>
-              <%= f.text_field :username, class: "form-control", required: true, minlength: 3, maxlength: 30,
-                              pattern: "[a-zA-Z0-9_]+", 
-                              title: "Solo lettere, numeri e underscore" %>
-              <small class="form-text text-muted">Solo lettere, numeri e underscore (3-30 caratteri)</small>
-            </div>
-
-            <div class="col-md-6">
-              <%= f.label :telephone, "Telefono", class: "form-label" %>
-              <%= f.text_field :telephone, class: "form-control", type: "tel",
-                              pattern: "(\+39)?[0-9]{6,13}",
-                              title: "Numero di telefono italiano senza spazi (es: 3331234567 o +393331234567)" %>
-              <small class="form-text text-muted">Numero italiano senza spazi (opzionale): 3331234567 o +393331234567</small>
-            </div>
+            <%= render "devise/registrations/user_fields", f: f %>
 
             <% if current_user.admin? %>
               <div class="col-md-6">
